--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="icon" href="./1011px-Logo_FC_Barcelona.svg.png" type="icon">
-    <meta name="description" content="This is Fc barcelona's Portfolio showcasing some skills">
-    <meta name="Keywords" content="Fc barcelona, La liga, Dreamteam, html, css, developer">
- <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./logo.svg.png" type="image/x-icon">
+   <meta name="description" content="This is a Fc barcelon's Portfolio that show some information about Fc Barcelona.">
+    <meta name="keywords" content="Fc Barcelona, Barca, La liga, Champions, Football, Soccer">
 </head>
 <body>
     <nav> 
@@ -21,7 +21,7 @@
     <section id="Home"> 
      <H1>Welcome to the Fc Barcelona's Portfolio</H1>
       <p>This is a showcase of what Fc Barcelona doing   </p>
-      <img src="./1011px-Logo_FC_Barcelona.svg.png" >
+      <img src="1011px-Logo_FC_Barcelona.svg.png" >
       
     </section>
 
